# autonomous-traffic-light

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  starting_point.cc
PyDrivingSim/: simulator.py
PyDrivingSim/pydrivingsim/: __init__.py  agent.py  cone.py  gps.py  graph.py  roadsegment.py  rock.py  trafficlight.py  world.py
PyDrivingSim/scenarios/: __init__.py  main_scenarios.py
basic_agent/: CMakeLists.txt  starting_point.cc
basic_agent/build_old/: CMakeCache.txt  Makefile
basic_agent/figure_plot/: PI_plots.m  a_longitudinal_control.m  position_vehicle.m  rrt_clothoid.m  rrt_tree.m  v_longitudinal_control.m
basic_agent/figure_plot/Kinematics/: Follow_clothoid_1.fig  Follow_clothoid_K_US_0.002.fig  Follow_clothoid_K_US_0.fig  Follow_clothoid_K_US_0_1.fig
basic_agent/figure_plot/Test_Pass_Stop/: 1_s(t)_v(t)_a(t).fig  1_v(s)_a(s).fig  2_v(s)_primitives.fig  2_v(t)_primitives.fig  3_a(s)_primitives.fig  3_a(t)_primitives.fig
basic_agent/figure_plot/Tree/: Tree_1000_dots.fig
basic_agent/lib/: interfaces_data_structs.h
basic_agent/matlab/: pass_primitive.m  primitives.prj  stop_primitive.m  stop_primitive_j0.m  student_def_pass_primitive.m  student_def_stop_primitive.m
basic_agent/matlab/codegen/lib/primitives/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  primitives.c  primitives_types.h  rtGetInf.h  rtw_proj.tmw
basic_agent/matlab/codegen/lib/primitives/examples/: main.h
basic_agent/matlab/codegen/lib/primitives/html/: report.mldatx
basic_agent/matlab/codegen/lib/primitives/interface/: _coder_primitives_api.c  _coder_primitives_info.c  _coder_primitives_mex.c
basic_agent/matlab/codegen/mex/a_from_coeffs_mex/: a_from_coeffs_mex.mexw64  cfiGuiReport.mat
basic_agent/matlab/codegen/mex/a_from_coeffs_mex/html/: report.mldatx
basic_agent/matlab/functions_exported/: a_from_coeffs.m  coef_list.m  final_opt_time_j0.m  j_from_coeffs.m  j_opt.m  lib_a_from_coeffs.prj  s_from_coeffs.m  s_opt.m  total_cost.m
basic_agent/rrt/: clothoid.csv  debugRTT_star.txt  endNode.csv  obstacles.csv  path_refined.csv  paths.csv  road.csv  rrt_clothoid.cpp  rrt_clothoid.h  rrt_read.cpp  rrt_read.h  rrt_star.cpp  rrt_star.h  rrt_star_refine.cpp  rrt_star_refine.h  rrt_support.cpp  rrt_support.h  tree.csv
figure_plot/: plot_v_real_req.asv  plot_v_real_req.m  plots.asv  plots.m  rrt_tree.m
figure_plot/Test_Pass_Stop/: 0_s(t)_v(t)_a(t).fig  1_v(s)_a(s).fig  2_v(t)_primitives.fig
figure_plot/Tree/: Paths.fig
lib/: basic.cmake
lib/win_visual_studio_x86/: agent_lib.lib
log/: rrt.h
matlab/: optimal_control.m  pass_primitive.m  pass_primitive_j0.m  primitives.prj  prototypes.m  stop_primitive.m  student_def_optimal_control.asv  student_def_optimal_control.m  student_def_pass_primitive.asv  student_def_pass_primitive.m  student_def_pass_primitive_j0.m  student_def_stop_primitive.m  student_def_stop_primitive_j0.m  student_pass_primitive.m  student_pass_primitive_j0.m  student_stop_primitive.m  student_stop_primitive.prj  student_stop_primitive_j0.m
matlab/codegen/lib/primitives/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  primitives.c  primitives.h  primitives_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
matlab/codegen/lib/primitives/examples/: main.c  main.h
matlab/codegen/lib/primitives/html/: report.mldatx
matlab/codegen/lib/primitives/interface/: _coder_primitives_api.c  _coder_primitives_api.h  _coder_primitives_info.c  _coder_primitives_info.h  _coder_primitives_mex.c  _coder_primitives_mex.h
matlab/codegen/mex/a_from_coeffs_mex/: a_from_coeffs_mex.mexw64  cfiGuiReport.mat
matlab/codegen/mex/a_from_coeffs_mex/html/: report.mldatx
matlab/functions_exported/: a_from_coeffs.m  a_opt.m  coef_list.m  final_opt_pos_j0.m  final_opt_time_j0.m  final_opt_time_j0_1.m  final_opt_time_j0_2.m  final_opt_time_pass.m  final_opt_time_stop.m  final_opt_time_stop_j0.m  final_opt_vel_j0.m  final_opt_vel_pass.m  j_from_coeffs.m  j_opt.m  min_vel.m  s_from_coeffs.m  s_opt.m  time_min_vel_pass.m  total_cost_var.m  v_from_coeffs.m  v_opt.m
rrt/: debugIsObstacle.txt  debugRTT_star.txt  endNode.csv  obstacles.csv  paths.csv  print_obstacles.txt  rrt_star.cpp  rrt_star.h  rrt_support.cpp  rrt_support.h  tree.csv
